feat: 租户相关问题处理
